flussonic (3.68.15)

  * DVR packetizer now writes on disk in async manner with segment droping
  * file disk io is tagged with pulse measurements now
  * migrating to lhttpc client

flussonic (3.68.14)

  * don't fail on afrt errors in hds when duration less than DTS
  * added update-debian.sh
  * fixed flu_session problem when backend wasn't rerequested
  * added protection for dvr_hour_storage when cannot write file
  * refactored hls_reader to be impulse without monotonic

flussonic (3.68.13)

  * rtsp reader don't fail if old reply for frame returns
  * i386 deploy support

flussonic (3.68.12)
  
  * request media size before drawing player
  * open HLS in flash player on firefox
  * S3 storage backend for DVR
  * OSMF player with HLS
  * notify about server disconnect in admin panel
  * flu_session inner refactoring
  * added stale authorization cache in flu_session
  * added global session limit and per-ip session limit
  * refactored dvr storage to be able to keep previews and keys
  * fix archive.js to enable selecting video from gap

flussonic (3.68.11)

  * don't crash on preview request
  * don't crash on wrong media request
  * don't crash hls_reader on empty segments

flussonic (3.68.10)

  * /erlyvideo/api/media_info API for checking media size
  * refactoring in RTSP to make publish possible
  * streams can be restarted from web-interface
  * log uploader from admin interface
  * timeshift_abs, timeshift_rel and mpegts now pass their pid to sessions #52
  * fixed dvr mp4 extraction naming #59

flussonic (3.68.9)

  * enable back playlists for files
  * enable rtp with padding
  * additional api /erlyvideo/api/server with misc server info
  * fixing monotone ticker to work with new files

flussonic (3.68.8)

  * fix back autostart streams on rtmp play
  * hds now doesn't fail on zero-length segments
  * skip RTCP with wrong SSRC
  * skip RTCP with 204 type
  * fixed flu_mixer

flussonic (3.68.7)

  * fixed session id
  * RTCP selects channel by SSRC