@@ -1,7 +1,7 @@
 {application, flussonic,
  [
   {description, ""},
-  {vsn, "3.68.14"},
+  {vsn, "3.68.15"},
   {registered, []},
   {applications, [
                   kernel,
